--- a/src/components/sign-in/sign-in.scss
+++ b/src/components/sign-in/sign-in.scss
@@ -1,9 +1,17 @@
 .sign-in {
-    width: 30vw;
+    width: 380px;
     display: flex;
     flex-direction: column;
 
     .title {
         margin: 10px 0;
+    }
+
+    .btn-group {
+        width: 100%;
+        // overflow: hidden;
+        display: flex;
+        justify-content: space-between;
+        // padding: 0.5rem;
     }
 }
