--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,27 @@ a {
 * {
   box-sizing: border-box;
 }
+
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: auto;
+    scrollbar-color: #C0C3C3 #ffffff;
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 16px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #ffffff;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #C0C3C3;
+    border-radius: 10px;
+    border: 3px solid #ffffff;
+    cursor: pointer;
+  }
+/* ===== Scrollbar CSS Ends ===== */
