--- a/src/components/custom-btn/custom-btn.scss
+++ b/src/components/custom-btn/custom-btn.scss
@@ -31,5 +31,16 @@
       border: none;
     }
   }
-}
 
+  &.inverted {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+
+    &:hover {
+      background-color: black;
+      color: white;
+      border: none;
+    }
+  }
+}
