checkout_page completed

--- a/src/components/cart-dropdown/cart-dropdown.scss
+++ b/src/components/cart-dropdown/cart-dropdown.scss
@@ -27,6 +27,12 @@
     font-size: 13px;
   }
 
+  .empty-msg{
+    font-size: 18px;
+    font-weight: 600;
+    margin: auto;
+  }
+
   & ::-webkit-scrollbar {
     width: 12px;
   }
