--- a/src/components/menu-item/menu-item.scss
+++ b/src/components/menu-item/menu-item.scss
@@ -13,12 +13,12 @@
     cursor: pointer;
 
     & .background-img {
-        transform: scale(1.1);
-        transition: transform 5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+      transform: scale(1.1);
+      transition: transform 5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
     }
 
     & .content {
-        opacity: 0.9;
+      opacity: 0.9;
     }
   }
 
@@ -69,6 +69,9 @@
       font-weight: lighter;
       font-size: 16px;
       text-transform: uppercase;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: clip;
     }
   }
 }
