--- a/src/pages/checkoutPage/checkout.scss
+++ b/src/pages/checkoutPage/checkout.scss
@@ -24,8 +24,24 @@
   }
 
   .total {
+    display: flex;
+    flex-direction: column;
     margin-top: 30px;
     margin-left: auto;
     font-size: 36px;
+  }
+
+  .test-warning {
+    text-align: center;
+    margin-top: 40px;
+    font-size: 24px;
+    color: red;
+  }
+
+  button {
+    height: 2.5rem;
+    width: 8rem;
+    margin-top: 40px;
+    margin-left: auto;
   }
 }
