implemeted styled-component

--- a/src/components/collection-item/collection-item.scss
+++ b/src/components/collection-item/collection-item.scss
@@ -12,6 +12,10 @@
     background-size: cover;
     background-position: center;
     margin-bottom: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    padding-bottom: 10%;
   }
 
   .custom-btn {
