added redux-saga into our app

--- a/src/components/preview-collections/previewCollections.scss
+++ b/src/components/preview-collections/previewCollections.scss
@@ -10,7 +10,10 @@
   }
 
   .preview {
-    display: flex;
-    justify-content: space-between;
+    // display: flex;
+    // justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 10px;
   }
 }
